# pydantic-ai-server

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  __init__.py  pyproject.toml
pai_server/: __init__.py  memory.py  server.py  serverutils.py  telemetry.py  tools.py
pais/: __init__.py  cli.py  memory.py  server.py  serverutils.py  tools.py
tests/: conftest.py  helpers.py  test_agent.py  test_agent_server.py  test_agentic_loop.py  test_string_mode.py  test_telemetry.py
