[project]
name = "pydantic-ai-server"
version = "0.2.8.dev0"
description = "PAIS - Pydantic AI Server for Kubernetes Agent Orchestration"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic-ai>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "sse-starlette>=1.6.0",
    "redis>=5.0.0",
    # OpenTelemetry core
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    # OpenTelemetry instrumentation
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-logging>=0.41b0",
    "opentelemetry-instrumentation-starlette>=0.41b0",
    # OpenTelemetry exporters
    "opentelemetry-exporter-otlp>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
    "test-mcp-echo-server>=0.1.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pais"]

[tool.black]
line-length = 100
target-version = ["py312"]
